updated urls for seo +redirects

--- a/creative-services/document-templates-formatting-graphic-design.html
+++ b/creative-services/document-templates-formatting-graphic-design.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Document templates & formatting | Christchurch NZ-Creafix Design</title>
+  <title>Document document-templates-formatting-graphic-designs & formatting | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Struggling to create tidy template documents for your business? Click to learn more who-we-are what we can do to help.">
+    content="Struggling to create tidy document-templates-formatting-graphic-design documents for your business? Click to learn more who-we-are what we can do to help.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -73,11 +73,11 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
+        <li><a class="dropdown-item" href="brand-strategy-development.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="logo-design-christchurch-nz.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="marketing-material-graphic-design.html">Marketing Material and
             Graphic Design</a></li>
-        <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
+        <li><a class="dropdown-item" href="document-templates-formatting-graphic-designs.html">Presentation and Proposal document-templates-formatting-graphic-designs</a>
         </li>
       </ul>
     </li>
@@ -87,12 +87,12 @@
         Digital Marketing
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        <li><a class="dropdown-item" href="../digital-marketing/digital-strategy-christchurch-nz.html">Digital Marketing Strategy</a>
         </li>
         <li><a class="dropdown-item" href="../digital-marketing/social-media-management-nz.html">Social Media Management</a></li>
         <li><a class="dropdown-item" href="../digital-marketing/website-marketing-christchurch.html">Website Marketing</a>
         </li>
-        <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+        <li><a class="dropdown-item" href="../digital-marketing/email-marketing-agency-christchurch.html">Email Marketing</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown item">
@@ -118,7 +118,7 @@
 </nav>
 
   <div class="title">
-    <h1 class="title">Presentation and proposal templates</h1>
+    <h1 class="title">Presentation and proposal document-templates-formatting-graphic-designs</h1>
   </div>
   <div class="container">
     <div class="row">
@@ -128,11 +128,11 @@
       <div class="col">
         <p class=" mb-1 bio">
           Who doesn't like receiving compliment on their presentation deck? Help your stakeholder focus on the content of your
-          presentation by using a stylish and uncluttered presentation template that will help you engage with your audience and
-          communicate effectively. We can create a template for you to use as a base for every presentation or help you design
+          presentation by using a stylish and uncluttered presentation document-templates-formatting-graphic-design that will help you engage with your audience and
+          communicate effectively. We can create a document-templates-formatting-graphic-design for you to use as a base for every presentation or help you design
           your next top notch deck by structuring the message and design layout that will set you up for success. We can also help
           you create compelling graphics that will convey your message effectively and rapidly.
-          As well as creating templates, we can format your Word or Google Docs documents to fix all the funky formatting errors
+          As well as creating document-templates-formatting-graphic-designs, we can format your Word or Google Docs documents to fix all the funky formatting errors
           and stop you from pulling your hair out!
                    
           </br>
@@ -143,12 +143,12 @@
           <li class="bio-list">◼ PowerPoint presentation</li>
           <li class="bio-list">◼ Google Slide presentation</li>
           <li class="bio-list">◼ Webinar slide deck design</li>
-          <li class="bio-list">◼ Proposal template</li>
-          <li class="bio-list">◼ Letter head templates</li>
-          <li class="bio-list">◼ Internal document template</li>
-          <li class="bio-list">◼ Email formatting template</li>
-          <li class="bio-list">◼ Client report template</li>
-          <li class="bio-list">◼ <a href="marketingcollateral.html">Graphic design</a></li>
+          <li class="bio-list">◼ Proposal document-templates-formatting-graphic-design</li>
+          <li class="bio-list">◼ Letter head document-templates-formatting-graphic-designs</li>
+          <li class="bio-list">◼ Internal document document-templates-formatting-graphic-design</li>
+          <li class="bio-list">◼ Email formatting document-templates-formatting-graphic-design</li>
+          <li class="bio-list">◼ Client report document-templates-formatting-graphic-design</li>
+          <li class="bio-list">◼ <a href="marketing-material-graphic-design.html">Graphic design</a></li>
           <li class="bio-list">◼ General formatting help on Microsoft Word or Google Docs</li>
 
 
@@ -162,20 +162,20 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logodesign.html"><img
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logo-design-christchurch-nz.html"><img
             src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logodesign.html">Logo creation</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketingcollateral.html"><img
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logo-design-christchurch-nz.html">Logo creation</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketing-material-graphic-design.html"><img
             src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketingcollateral.html">Marketing Collateral</a>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketing-material-graphic-design.html">Marketing Collateral</a>
       </div>
       <div class="w-100 d-md-none"></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brandstrategy.html"><img
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brand-strategy-development.html"><img
             src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brandstrategy.html">Brand strategy</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/templates.html"><img
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brand-strategy-development.html">Brand strategy</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/document-templates-formatting-graphic-designs.html"><img
             src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/templates.html">Presentation and Proposal</a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/document-templates-formatting-graphic-designs.html">Presentation and Proposal</a></div>
     </div>
   </div>
 
