--- a/creative-services/logo-design-christchurch-nz.html
+++ b/creative-services/logo-design-christchurch-nz.html
@@ -73,11 +73,11 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
+        <li><a class="dropdown-item" href="brand-strategy-development.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="logo-design-christchurch-nz.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="marketing-material-graphic-design.html">Marketing Material and
             Graphic Design</a></li>
-        <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
+        <li><a class="dropdown-item" href="document-document-templates-formatting-graphic-designs-formatting-graphic-design.html">Presentation and Proposal document-templates-formatting-graphic-designs</a>
         </li>
       </ul>
     </li>
@@ -87,12 +87,12 @@
         Digital Marketing
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        <li><a class="dropdown-item" href="../digital-marketing/digital-strategy-christchurch-nz.html">Digital Marketing Strategy</a>
         </li>
         <li><a class="dropdown-item" href="../digital-marketing/social-media-management-nz.html">Social Media Management</a></li>
         <li><a class="dropdown-item" href="../digital-marketing/website-marketing-christchurch.html">Website Marketing</a>
         </li>
-        <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+        <li><a class="dropdown-item" href="../digital-marketing/email-marketing-agency-christchurch.html">Email Marketing</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown item">
@@ -142,12 +142,12 @@
           <li class="bio-list">◼ Review of the feelings/emotions we want the brand to convey</li>
           <li class="bio-list">◼ Logo creation</li>
           <li class="bio-list">◼ Icon design</li>
-          <li class="bio-list">◼ <a href="brandstrategy.html">Branding creation</a></li>
+          <li class="bio-list">◼ <a href="brand-strategy-development.html">Branding creation</a></li>
           <li class="bio-list">◼ Rebranding</li>
           <li class="bio-list">◼ Brand style guides</li>
           <li class="bio-list">◼ Brand and logo assets</li>
-          <li class="bio-list">◼ <a href="templates.html">Templates</a></li>
-          <li class="bio-list">◼ <a href="marketingcollateral.html">Marketing collateral</a></li>
+          <li class="bio-list">◼ <a href="document-document-templates-formatting-graphic-designs-formatting-graphic-design.html">document-templates-formatting-graphic-designs</a></li>
+          <li class="bio-list">◼ <a href="marketing-material-graphic-design.html">Marketing collateral</a></li>
         </ul>
 
         </p>
@@ -157,20 +157,20 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logodesign.html"><img
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logo-design-christchurch-nz.html"><img
             src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logodesign.html">Logo creation</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketingcollateral.html"><img
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logo-design-christchurch-nz.html">Logo creation</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketing-material-graphic-design.html"><img
             src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketingcollateral.html">Marketing Collateral</a>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketing-material-graphic-design.html">Marketing Collateral</a>
       </div>
       <div class="w-100 d-md-none"></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brandstrategy.html"><img
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brand-strategy-development.html"><img
             src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brandstrategy.html">Brand strategy</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/templates.html"><img
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brand-strategy-development.html">Brand strategy</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/document-templates-formatting-graphic-designs.html"><img
             src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/templates.html">Presentation and Proposal</a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/document-templates-formatting-graphic-designs.html">Presentation and Proposal</a></div>
     </div>
   </div>
 
