--- a/digital-marketing/digital-strategy-christchurch-nz.html
+++ b/digital-marketing/digital-strategy-christchurch-nz.html
@@ -73,11 +73,11 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing Material and
+        <li><a class="dropdown-item" href="../creative-services/brand-strategy-development.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="../creative-services/logo-design-christchurch-nz.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="../creative-services/marketing-material-graphic-designgraphic-design.html">Marketing Material and
             Graphic Design</a></li>
-        <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and Proposal Templates</a>
+        <li><a class="dropdown-item" href="../creative-services/document-document-templates-formatting-graphic-designs-formatting-graphic-design.html">Presentation and Proposal document-templates-formatting-graphic-designs</a>
         </li>
       </ul>
     </li>
@@ -87,12 +87,12 @@
         Digital Marketing
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="digitalstrategy.html">Digital Marketing Strategy</a>
+        <li><a class="dropdown-item" href="digital-strategy-christchurch-nz.html">Digital Marketing Strategy</a>
         </li>
         <li><a class="dropdown-item" href="social-media-management-nz.html">Social Media Management</a></li>
         <li><a class="dropdown-item" href="website-marketing-christchurch.html">Website Marketing</a>
         </li>
-        <li><a class="dropdown-item" href="emailmarketing.html">Email Marketing</a></li>
+        <li><a class="dropdown-item" href="email-marketing-agency-christchurch.html">Email Marketing</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown item">
@@ -141,18 +141,18 @@
           <li class="bio-list">◼ Digital marketing strategy</li>
           <li class="bio-list">◼ Identify the best suitable marketing/advertising channels</li>
           <li class="bio-list">◼ Digital marketing assessment</li>
-          <li class="bio-list">◼ <a href="../creative-services/brandstrategy.html">Buyer persona creation</a></li>
+          <li class="bio-list">◼ <a href="../creative-services/brand-strategy-development.html">Buyer persona creation</a></li>
           <li class="bio-list">◼ <a href="../web-development/seo-services-christchurch.html">Search Engine Optimisation (SEO)</a></li>
           <li class="bio-list">◼ <a href="social-media-management-nz.html">Social Media Marketing (SMM)</a></li>
           <li class="bio-list">◼ Build up your emails list</li>
           <li class="bio-list">◼ Lead magnet creation</li>
-          <li class="bio-list">◼ <a href="../creative-services/brandstrategy.html">Create your customer journey</a></li>
+          <li class="bio-list">◼ <a href="../creative-services/brand-strategy-development.html">Create your customer journey</a></li>
           <li class="bio-list">◼ Create your ideal sales funnel that converts</li>
           <li class="bio-list">◼ Overall conversion rate optimisation</li>
           <li class="bio-list">◼ Digital advertising</li>
           <li class="bio-list">◼ Content Marketing</li>
           <li class="bio-list">◼ <a href="../web-development/landing-pages.html">Website marketing and landing pages</a></li>
-          <li class="bio-list">◼ <a href="emailmarketing.html">Email Marketing</a></li>
+          <li class="bio-list">◼ <a href="email-marketing-agency-christchurch.html">Email Marketing</a></li>
           <li class="bio-list">◼ Downloadable content</li>
         </ul>
         </p>
@@ -162,16 +162,16 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/digitalstrategy.html"><img src="../images/DMicon.png"
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/digital-strategy-christchurch-nz.html"><img src="../images/DMicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digital-strategy-christchurch-nz.html">Digital Marketing Strategy</a></div>
       <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/social-media-management-nz.html"><img src="../images/DMicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
       <div class="col-lg-2 col-md-2 col-4"> <a href="/digital-marketing/social-media-management-nz.html">Social Media Management</a></div>
         <div class="w-100 d-md-none"></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/emailmarketing.html"><img src="../images/DMicon.png"
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/email-marketing-agency-christchurch.html"><img src="../images/DMicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/emailmarketing.html">Email Marketing</a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/email-marketing-agency-christchurch.html">Email Marketing</a></div>
       <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/website-marketing-christchurch.html"><img src="../images/DMicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
       <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/website-marketing-christchurch.html">Website Marketing</a></div>
