--- a/digital-marketing/social-media-management-nz.html
+++ b/digital-marketing/social-media-management-nz.html
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing Material and
+          <li><a class="dropdown-item" href="../creative-services/brand-strategy-development.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="../creative-services/logo-design-christchurch-nz.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="../creative-services/marketing-material-graphic-design.html">Marketing Material and
               Graphic Design</a></li>
-          <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and Proposal Templates</a>
+          <li><a class="dropdown-item" href="../creative-services/document-document-templates-formatting-graphic-designs-formatting-graphic-design.html">Presentation and Proposal document-templates-formatting-graphic-designs</a>
           </li>
         </ul>
       </li>
@@ -87,12 +87,12 @@
           Digital Marketing
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="digitalstrategy.html">Digital Marketing Strategy</a>
+          <li><a class="dropdown-item" href="digital-strategy-christchurch-nz.html">Digital Marketing Strategy</a>
           </li>
           <li><a class="dropdown-item" href="social-media-management-nz.html">Social Media Management</a></li>
           <li><a class="dropdown-item" href="website-marketing-christchurch.html">Website Marketing</a>
           </li>
-          <li><a class="dropdown-item" href="emailmarketing.html">Email Marketing</a></li>
+          <li><a class="dropdown-item" href="email-marketing-agency-christchurch.html">Email Marketing</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown item">
@@ -157,8 +157,8 @@
           <li class="bio-list">◼ Setup of Facebook business page</li>
           <li class="bio-list">◼ Setup of LinkedIn business page</li>
           <li class="bio-list">◼ Social media posting schedule</li>
-          <li class="bio-list">◼ <a href="../creative-services/marketingcollateral.html">Content creation</a></li>
-          <li class="bio-list">◼ <a href="../creative-services/marketingcollateral.html">Creation of graphics or material to publish</a></li>
+          <li class="bio-list">◼ <a href="../creative-services/marketing-material-graphic-design.html">Content creation</a></li>
+          <li class="bio-list">◼ <a href="../creative-services/marketing-material-graphic-design.html">Creation of graphics or material to publish</a></li>
 
         </ul>
 
@@ -169,18 +169,18 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/digitalstrategy.html"><img
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/digital-strategy-christchurch-nz.html"><img
             src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digitalstrategy.html">Digital Marketing
+      <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digital-strategy-christchurch-nz.html">Digital Marketing
           Strategy</a></div>
       <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/social-media-management-nz.html"><img
             src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
       <div class="col-lg-2 col-md-2 col-4"> <a href="/digital-marketing/social-media-management-nz.html">Social Media Management</a>
       </div>
       <div class="w-100 d-md-none"></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/emailmarketing.html"><img
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/email-marketing-agency-christchurch.html"><img
             src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/emailmarketing.html">Email Marketing</a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/email-marketing-agency-christchurch.html">Email Marketing</a></div>
       <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/website-marketing-christchurch.html"><img
             src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
       <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/website-marketing-christchurch.html">Website Marketing</a></div>
