--- a/digital-marketing/website-marketing-christchurch.html
+++ b/digital-marketing/website-marketing-christchurch.html
@@ -73,11 +73,11 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing Material and
+        <li><a class="dropdown-item" href="../creative-services/brand-strategy-development.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="../creative-services/logo-design-christchurch-nz.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="../creative-services/marketing-material-graphic-design.html">Marketing Material and
             Graphic Design</a></li>
-        <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and Proposal Templates</a>
+        <li><a class="dropdown-item" href="../creative-services/document-document-templates-formatting-graphic-designs-formatting-graphic-design.html">Presentation and Proposal document-templates-formatting-graphic-designs</a>
         </li>
       </ul>
     </li>
@@ -87,12 +87,12 @@
         Digital Marketing
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="digitalstrategy.html">Digital Marketing Strategy</a>
+        <li><a class="dropdown-item" href="digital-strategy-christchurch-nz.html">Digital Marketing Strategy</a>
         </li>
         <li><a class="dropdown-item" href="social-media-management-nz.html">Social Media Management</a></li>
         <li><a class="dropdown-item" href="website-marketing-christchurch.html">Website Marketing</a>
         </li>
-        <li><a class="dropdown-item" href="emailmarketing.html">Email Marketing</a></li>
+        <li><a class="dropdown-item" href="email-marketing-agency-christchurch.html">Email Marketing</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown item">
@@ -131,7 +131,7 @@
           and the clarity of the information displayed to the visitors. By optimising your images, making your website more
           accessible and creating interesting content for your potential customer, you will in time increase your ranking on <a href="../web-development/seo-services-christchurch.html">search engines</a> and increase your traffic. The more on target traffic your website receives the higher the potential of sales
           conversion.
-          We can optimise your website to help you get in front of your <a href="digitalstrategy.html">target audience</a>.          </br>
+          We can optimise your website to help you get in front of your <a href="digital-strategy-christchurch-nz.html">target audience</a>.          </br>
           We can help you with:
         </p>
         <p class=" mb-1">
@@ -139,7 +139,7 @@
           <li class="bio-list">◼ Google analytics</li>
           <li class="bio-list">◼ <a href="../web-development/seo-services-christchurch.html">Search engine optimisation (SEO)</a></li>
           <li class="bio-list">◼ <a href="../web-development/website-audit-checker-nz.html">Website audit for optimisation</a></li>
-          <li class="bio-list">◼ <a href="digitalstrategy.html">Web funnel design to boost digital conversion rate</a></li>
+          <li class="bio-list">◼ <a href="digital-strategy-christchurch-nz.html">Web funnel design to boost digital conversion rate</a></li>
           <li class="bio-list">◼ A/B testing</li>
           <li class="bio-list">◼ Content and keyword review</li>
           <li class="bio-list">◼ Usability testing</li>
@@ -155,18 +155,18 @@
 
 <div class="container creative-services">
   <div class="row">
-    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/digitalstrategy.html"><img
+    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/digital-strategy-christchurch-nz.html"><img
           src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digitalstrategy.html">Digital Marketing
+    <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digital-strategy-christchurch-nz.html">Digital Marketing
         Strategy</a></div>
     <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/social-media-management-nz.html"><img
           src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
     <div class="col-lg-2 col-md-2 col-4"> <a href="/digital-marketing/social-media-management-nz.html">Social Media Management</a>
     </div>
     <div class="w-100 d-md-none"></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/emailmarketing.html"><img
+    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/email-marketing-agency-christchurch.html"><img
           src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/emailmarketing.html">Email Marketing</a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/email-marketing-agency-christchurch.html">Email Marketing</a></div>
     <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/website-marketing-christchurch.html"><img
           src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
     <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/website-marketing-christchurch.html">Website Marketing</a></div>
