--- a/web-development/web-design-christchurch.html
+++ b/web-development/web-design-christchurch.html
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing Material and
+          <li><a class="dropdown-item" href="../creative-services/brand-strategy-development.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="../creative-services/logo-design-christchurch-nz.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="../creative-services/marketing-material-graphic-design.html">Marketing Material and
               Graphic Design</a></li>
-          <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and Proposal Templates</a>
+          <li><a class="dropdown-item" href="../creative-services/document-document-templates-formatting-graphic-designs-formatting-graphic-design.html">Presentation and Proposal document-templates-formatting-graphic-designs</a>
           </li>
         </ul>
       </li>
@@ -87,12 +87,12 @@
           Digital Marketing
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          <li><a class="dropdown-item" href="../digital-marketing/digital-strategy-christchurch-nz.html">Digital Marketing Strategy</a>
           </li>
           <li><a class="dropdown-item" href="../digital-marketing/social-media-management-nz.html">Social Media Management</a></li>
           <li><a class="dropdown-item" href="../digital-marketing/website-marketing-christchurch.html">Website Marketing</a>
           </li>
-          <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/email-marketing-agency-christchurch.html">Email Marketing</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown item">
