--- a/creative-services/brand-strategy-development.html
+++ b/creative-services/brand-strategy-development.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Marketing Material & Graphics | Christchurch NZ-Creafix Design</title>
+  <title>Brand Strategy Development | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Did you know we help businesses like yours create brochures and graphics that promotes your business? Click to learn more who-we-are how we can help.">
+    content="Need help developing a brand strategy that will help you stand out from the crowd? Click to learn more who-we-are what we can help with. ">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -66,18 +66,18 @@
       <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
             alt="creafix design logo" width="150" /></a></li>
       <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
-  
+     
       <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
+          <li><a class="dropdown-item" href="brand-strategy-development.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="logo-design-christchurch-nz.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="marketing-material-graphic-design.html">Marketing Material and
               Graphic Design</a></li>
-          <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
+          <li><a class="dropdown-item" href="document-document-templates-formatting-graphic-designs-formatting-graphic-design.html">Presentation and Proposal document-templates-formatting-graphic-designs</a>
           </li>
         </ul>
       </li>
@@ -87,12 +87,12 @@
           Digital Marketing
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          <li><a class="dropdown-item" href="../digital-marketing/digital-strategy-christchurch-nz.html">Digital Marketing Strategy</a>
           </li>
           <li><a class="dropdown-item" href="../digital-marketing/social-media-management-nz.html">Social Media Management</a></li>
           <li><a class="dropdown-item" href="../digital-marketing/website-marketing-christchurch.html">Website Marketing</a>
           </li>
-          <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/email-marketing-agency-christchurch.html">Email Marketing</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown item">
@@ -109,79 +109,71 @@
         </ul>
       </li>
       <li class="item"> <a href="../our-previous-work.html" title="Our previous work">Work</a></li>
-      <li class="item"> <a href="../who-we-are.html" title="who-we-are">who-we-are</a></li>
+<li class="item"> <a href="../who-we-are.html" title="who-we-are">who-we-are</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
-  
-  
+
+
     </ul>
   </nav>
 
+
   <div class="title">
-    <h1 class="title">Marketing material and graphic design</h1>
+    <h1 class="title">Brand Strategy</h1>
   </div>
-  <div class="container">
-    <div class="row">
-      <div class="col mb-3 align-self-center">
-        <img src="../images/mockup.png" alt="sample colour palettes for selection" class="service-image">
+  <div class="container" > 
+    <div class="row"> 
+      <div class="col mb-3 align-self-center ">
+<img src="../images/brand%20strategy.jpg" alt="people brainstorming in front of whiteboard" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1 bio">Well-crafted marketing material can help you catch the attention of your potential customers. This material can vary
-        largely depending on your marketing objectives; it could be a simple effective advertising flyer to a complete product
-        advertising catalogue.
-        It is important to know who your audience is before creating advertising material. We can help you put together a <a href="brandstrategy.html">branding</a> and <a href="../digital-marketing/digitalstrategy.html">marketing strategy</a> that will make sure
-        that each piece is targeting the right customers. To help convince your customers to buy your product, we can help you
-        build trust by creating with you the marketing collateral that will set you as an authority in your industry.
-          
-          </br>
-          We can help you with:
-        </p>
-        <p class=" mb-1">
-        <ul>
-          <li class="bio-list">◼ <a href="brandstrategy.html">Identify your target customers</a></li>
-          <li class="bio-list">◼ <a href="brandstrategy.html">Research and build customer persona</a></li>
-          <li class="bio-list">◼ Brochure design</li>
-          <li class="bio-list">◼ Product catalogue design</li>
-          <li class="bio-list">◼ Postcards and thank you cards</li>
-          <li class="bio-list">◼ Flyer design</li>
-          <li class="bio-list">◼ Poster design</li>
-          <li class="bio-list">◼ Infographic design</li>
-          <li class="bio-list">◼ Graphic design</li>
-          <li class="bio-list">◼ Print and digital advertisement</li>
-          <li class="bio-list">◼ Social media advertisement</li>
-          <li class="bio-list">◼ Banner design</li>
-          <li class="bio-list">◼ Expo booth design</li>
-          <li class="bio-list">◼ Sign and flag design</li>
-          <li class="bio-list">◼ Apparel and uniform branding</li>
-          <li class="bio-list">◼ Newsletter and blog posts template</li>
-          <li class="bio-list">◼ <a href="templates.html">Case studies template</a></li>
-          <li class="bio-list">◼ Testimonial and video explainer script and design</li>
-          <li class="bio-list">◼ <a href="../web-development/landing-pages.html">Landing page design</a></li>
-        </ul>
+    <p class=" mb-1 bio">
+      Are you starting up a new business? Or are you thinking who-we-are refreshing the look of your current business? We can help
+      you develop your brand strategy and help you put together a program that will help you stand out as a brand and reach
+      your ideal customers. Along the strategy, we can help you create the branding elements that represents you and
+      communicates for you by creating the suite of marketing collateral that you need for promoting your business.</br>
+  We can help you create the following elements:
+  </p>
+    <p class=" mb-1">
+    <ul> 
+  <li class="bio-list">◼ Complete Brand Strategy development</li>
+  <li class="bio-list">◼ Consolidate business objectives</li>
+  <li class="bio-list">◼ Identify your target customers</li>
+  <li class="bio-list">◼ Research and build customer persona</li>
+  <li class="bio-list">◼ Develop your brand positioning</li>
+  <li class="bio-list">◼ Develop messaging strategies for each target market</li>
+  <li class="bio-list">◼ Develop your brand identity</li>
+  <li class="bio-list">◼ Develop your content marketing strategy</li>
+  <li class="bio-list">◼ <a href="logo-design-christchurch-nz.html">Logo creation</a></li>
+  <li class="bio-list">◼ Brand guidelines</li>
+  <li class="bio-list">◼ Business Cards</li>
+  <li class="bio-list">◼ <a href="document-document-templates-formatting-graphic-designs-formatting-graphic-design.html">Letterheads</a></li>
+  <li class="bio-list">◼ Signage</li>
+  <li class="bio-list">◼ Advertisement design</li>
+  <li class="bio-list">◼ Graphic design</li>
+  <li class="bio-list">◼ <a href="../web-development/web-design-christchurch.html">Web design</a></li>
+  <li class="bio-list">◼ Presentation decks and proposal design</li>
 
-        </p>
-      </div>
-    </div>
-  </div>
-
-<div class="container creative-services">
-  <div class="row">
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logodesign.html"><img
-          src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logodesign.html">Logo creation</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketingcollateral.html"><img
-          src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketingcollateral.html">Marketing Collateral</a>
-    </div>
-    <div class="w-100 d-md-none"></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brandstrategy.html"><img
-          src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brandstrategy.html">Brand strategy</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/templates.html"><img
-          src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/templates.html">Presentation and Proposal</a></div>
-  </div>
+</ul>
+</p>
 </div>
+</div>
+</div>
+  
+    <div class="container creative-services">
+      <div class="row">
+        <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logo-design-christchurch-nz.html"><img src="../images/Creativeicon.png" alt="Creative services pencil icon"
+            class="service-icon" /></a></div>
+        <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logo-design-christchurch-nz.html">Logo creation</a></div>
+        <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketing-material-graphic-design.html"><img src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+        <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketing-material-graphic-design.html">Marketing Collateral</a></div>
+        <div class="w-100 d-md-none"></div>
+        <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brand-strategy-development.html"><img src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+        <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brand-strategy-development.html">Brand strategy</a></div>
+        <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/document-templates-formatting-graphic-designs.html"><img src="../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+        <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/document-templates-formatting-graphic-designs.html">Presentation and Proposal</a></div>
+      </div>
+      </div>
 
 
 </body>
