--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing Material and
+        <li><a class="dropdown-item" href="../creative-services/brand-strategy-development.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="../creative-services/logo-design-christchurch-nz.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="../creative-services/marketing-material-graphic-design.html">Marketing Material and
             Graphic Design</a></li>
-        <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and Proposal Templates</a>
+        <li><a class="dropdown-item" href="../creative-services/document-templates-formatting-graphic-designs.html">Presentation and Proposal document-templates-formatting-graphic-designs</a>
         </li>
       </ul>
     </li>
@@ -83,12 +83,12 @@
         Digital Marketing
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        <li><a class="dropdown-item" href="../digital-marketing/digital-strategy-christchurch-nz.html">Digital Marketing Strategy</a>
         </li>
         <li><a class="dropdown-item" href="../digital-marketing/social-media-management-nz.html">Social Media Management</a></li>
         <li><a class="dropdown-item" href="../digital-marketing/website-marketing-christchurch.html">Website Marketing</a>
         </li>
-        <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+        <li><a class="dropdown-item" href="../digital-marketing/email-marketing-agency-christchurch.html">Email Marketing</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown item">
@@ -148,27 +148,27 @@
 <div class="title" > <h2 class="title">What we do</h2></div>
 <div class="container intro-services">
   <div class="row">
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logodesign.html"><img src="../images/Creativeicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/logo-design-christchurch-nz.html"><img src="../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logodesign.html">Logo creation</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketingcollateral.html"><img src="../images/Creativeicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/logo-design-christchurch-nz.html">Logo creation</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/marketing-material-graphic-design.html"><img src="../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketingcollateral.html">Marketing Collateral</a></div>
+    <div class="col-lg-2 col-md-2 col-4"> <a href="/creative-services/marketing-material-graphic-design.html">Marketing Collateral</a></div>
     <div class="w-100 d-md-none"></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/digitalstrategy.html"><img src="../images/DMicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/digital-strategy-christchurch-nz.html"><img src="../images/DMicon.png"
           alt="Digital marketing services phone icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digital-strategy-christchurch-nz.html">Digital Marketing Strategy</a></div>
     <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/seo-services-christchurch.html"><img src="../images/WebDevicon.png"
           alt="Web services screen icon" class="service-icon" /></a></div>
     <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/seo-services-christchurch.html">Search Engine Optimisation</a></div>
   </div>
   <div class="row">
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brandstrategy.html"><img src="../images/Creativeicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/brand-strategy-development.html"><img src="../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brandstrategy.html">Brand strategy</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/templates.html"><img src="../images/Creativeicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/brand-strategy-development.html">Brand strategy</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative-services/document-templates-formatting-graphic-designs.html"><img src="../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/templates.html">Presentation and Proposal</a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/creative-services/document-templates-formatting-graphic-designs.html">Presentation and Proposal</a></div>
     <div class="w-100 d-md-none"></div>
     <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/web-design-christchurch.html"><img src="../images/WebDevicon.png"
           alt="Web services screen icon" class="service-icon" /></a></div>
@@ -262,7 +262,7 @@
     
       <div class="carousel-item">
         <p class="d-block w-100">"Thanks Audrey,  Love your work!"
-        "That looks great!  Can't wait to use the bike template now!"<br/>
+        "That looks great!  Can't wait to use the bike document-templates-formatting-graphic-design now!"<br/>
         
         — Jaques, Owner @ DISA Solutions Ltd </p>
       </div>
