--- a/our-previous-work.html
+++ b/our-previous-work.html
@@ -73,12 +73,12 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing Material and
+        <li><a class="dropdown-item" href="./../creative-services/brand-strategy-development.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="./../creative-services/logo-design-christchurch-nz.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="./../creative-services/marketing-material-graphic-design.html">Marketing Material and
             Graphic Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and Proposal
-            Templates</a>
+        <li><a class="dropdown-item" href="./../creative-services/document-templates-formatting-graphic-designs.html">Presentation and Proposal
+            document-templates-formatting-graphic-designs</a>
         </li>
       </ul>
     </li>
@@ -88,12 +88,12 @@
         Digital Marketing
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        <li><a class="dropdown-item" href="./../digital-marketing/digital-strategy-christchurch-nz.html">Digital Marketing Strategy</a>
         </li>
         <li><a class="dropdown-item" href="./../digital-marketing/social-media-management-nz.html">Social Media Management</a></li>
         <li><a class="dropdown-item" href="./../digital-marketing/website-marketing-christchurch.html">Website Marketing</a>
         </li>
-        <li><a class="dropdown-item" href="./../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+        <li><a class="dropdown-item" href="./../digital-marketing/email-marketing-agency-christchurch.html">Email Marketing</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown item">
@@ -148,13 +148,13 @@
         <h3 class="work-type"> ◼ Print design</h3>
         <h2 class="work-title mb-2 ">Intech catalogue</h2>
         <p class="work-desc mb-1">
-          Creation of a multi category product catalogue template.
+          Creation of a multi category product catalogue document-templates-formatting-graphic-design.
         </p>
 
       </div>
       <div class="col-md-7 mt-2 mb-2 align-self-center">
         
-          <img src="images/Intech catalogue.jpg" alt="catalogue template Intech image"
+          <img src="images/Intech catalogue.jpg" alt="catalogue document-templates-formatting-graphic-design Intech image"
             class="img-fluid rounded mx-auto d-block img-thumbnail img-sample" />
         
       </div>
@@ -251,7 +251,7 @@
           <h3 class="work-type"> ◼ Brand development</h3>
           <h2 class="work-title mb-2">DISA Solutions Ltd</h2>
           <p class="work-desc mb-1">
-            Creation of functional document templates and additional logo following current company branding.
+            Creation of functional document document-templates-formatting-graphic-designs and additional logo following current company branding.
           </p>
   
         </div>
