--- a/websitetermofuse.html
+++ b/websitetermofuse.html
@@ -73,12 +73,12 @@
         Creative Services
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing Material and
+        <li><a class="dropdown-item" href="./../creative-services/brand-strategy-development.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="./../creative-services/logo-design-christchurch-nz.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="./../creative-services/marketing-material-graphic-design.html">Marketing Material and
             Graphic Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and Proposal
-            Templates</a>
+        <li><a class="dropdown-item" href="./../creative-services/document-templates-formatting-graphic-designs.html">Presentation and Proposal
+            document-templates-formatting-graphic-designs</a>
         </li>
       </ul>
     </li>
@@ -88,12 +88,12 @@
         Digital Marketing
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        <li><a class="dropdown-item" href="./../digital-marketing/digital-strategy-christchurch-nz.html">Digital Marketing Strategy</a>
         </li>
         <li><a class="dropdown-item" href="./../digital-marketing/social-media-management-nz.html">Social Media Management</a></li>
         <li><a class="dropdown-item" href="./../digital-marketing/website-marketing-christchurch.html">Website Marketing</a>
         </li>
-        <li><a class="dropdown-item" href="./../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+        <li><a class="dropdown-item" href="./../digital-marketing/email-marketing-agency-christchurch.html">Email Marketing</a></li>
       </ul>
     </li>
     <li class="nav-item dropdown item">
@@ -191,7 +191,7 @@
   represent and warrant that:
   <ul>
   <li>◼ you are either the sole and exclusive owner of all User Content or you have all rights, licences, consents and
-  releases that are necessary to grant to us the rights in such User Content (as contemplated by these Terms); and</li>
+  releases that are necessary to grant to us the rights in such User Content (as condocument-templates-formatting-graphic-designd by these Terms); and</li>
   <li>◼ neither the User Content nor the posting, uploading, publication, submission or transmission of the User Content or
   our use of the User Content on, through or by means of our Site will infringe, misappropriate or violate a third party's
   intellectual property rights, or rights of publicity or privacy, or result in the violation of any applicable law or
