Corrected broken links

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <li><a class="dropdown-item" href="../creative-services/logo-design-christchurch-nz.html">Logo Design</a></li>
         <li><a class="dropdown-item" href="../creative-services/marketing-material-graphic-design.html">Marketing Material and
             Graphic Design</a></li>
-        <li><a class="dropdown-item" href="../creative-services/document-templates-formatting-graphic-designs.html">Presentation and Proposal document-templates-formatting-graphic-designs</a>
+        <li><a class="dropdown-item" href="../creative-services/document-templates-formatting-graphic-design.html">Presentation and Proposal document-templates-formatting-graphic-designs</a>
         </li>
       </ul>
     </li>
@@ -262,7 +262,7 @@
     
       <div class="carousel-item">
         <p class="d-block w-100">"Thanks Audrey,  Love your work!"
-        "That looks great!  Can't wait to use the bike document-templates-formatting-graphic-design now!"<br/>
+        "That looks great!  Can't wait to use the bike templates now!"<br/>
         
         — Jaques, Owner @ DISA Solutions Ltd </p>
       </div>
