--- a/creative-services/document-templates-formatting-graphic-design.html
+++ b/creative-services/document-templates-formatting-graphic-design.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Document document-templates-formatting-graphic-designs & formatting | Christchurch NZ-Creafix Design</title>
+  <title>Document templates & formatting | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
