--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
        </p>
       <div class="contact-button">
-        <a href="who-we-are.html" class="contact-link" title="Learn more who-we-are me">Learn more who-we-are us</a>
+        <a href="who-we-are.html" class="contact-link" title="Learn more about us">Learn more about us</a>
       </div>
            </div>
        
@@ -212,7 +212,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4 col-xs-12 ">
-      <img src="images/Mascot%20work%20with%20me.png" alt="Creafix Mascot why work with me?" class="img-fluid mx-auto d-block mascot">
+      <img src="images/Mascot%20work%20with%20me.png" alt="Creafix Mascot why work with us?" class="img-fluid mx-auto d-block mascot">
     </div>
     <div class="col-lg-7 col-xs-12">
       <p class="bio">Whether you've been in business for 2 or 20 years, you need visual communication and strategy that will make you reach
