--- a/web-development/web-design-christchurch.html
+++ b/web-development/web-design-christchurch.html
@@ -77,7 +77,7 @@
           <li><a class="dropdown-item" href="../creative-services/logo-design-christchurch-nz.html">Logo Design</a></li>
           <li><a class="dropdown-item" href="../creative-services/marketing-material-graphic-design.html">Marketing Material and
               Graphic Design</a></li>
-          <li><a class="dropdown-item" href="../creative-services/document-templates-formatting-graphic-design.html">Presentation and Proposal document-templates-formatting-graphic-designs</a>
+          <li><a class="dropdown-item" href="../creative-services/document-templates-formatting-graphic-design.html">Presentation and Proposal document-templates-formatting-graphic-design</a>
           </li>
         </ul>
       </li>
@@ -177,9 +177,9 @@
     <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/web-design-christchurch.html"><img src="../images/WebDevicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
     <div class="col-lg-2 col-md-2 col-4"><a href="/web-development/web-design-christchurch.html">Web design & development</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/seo.html"><img src="../images/WebDevicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/seo-services-christchurch.html"><img src="../images/WebDevicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"> <a href="/web-development/seo.html">Search Engine Optimisation (SEO)</a></div>
+    <div class="col-lg-2 col-md-2 col-4"> <a href="/web-development/seo-services-christchurch.html">Search Engine Optimisation (SEO)</a></div>
     <div class="w-100 d-md-none"></div>
     <div class="col-lg-1 col-md-1 col-2"><a href="/web-development/landing-pages.html"><img
           src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
