Updated broken links

--- a/creative-services/marketing-material-graphic-design.html
+++ b/creative-services/marketing-material-graphic-design.html
@@ -153,8 +153,8 @@
           <li class="bio-list">◼ Expo booth design</li>
           <li class="bio-list">◼ Sign and flag design</li>
           <li class="bio-list">◼ Apparel and uniform branding</li>
-          <li class="bio-list">◼ Newsletter and blog posts document-templates-formatting-graphic-design</li>
-          <li class="bio-list">◼ <a href="document-document-templates-formatting-graphic-design-formatting-graphic-design.html">Case studies document-templates-formatting-graphic-design</a></li>
+          <li class="bio-list">◼ Newsletter and blog posts template</li>
+          <li class="bio-list">◼ <a href="document-templates-formatting-graphic-design.html">Case studies template</a></li>
           <li class="bio-list">◼ Testimonial and video explainer script and design</li>
           <li class="bio-list">◼ <a href="../web-development/landing-pages.html">Landing page design</a></li>
         </ul>
